[package]
name = "fedirust"
version = "0.1.0"
authors = ["Hannah Ward <hannah.ward01@bbc.co.uk>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dialoguer = "0.4.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = "0.9.21"
url = "2.1.0"
